--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
     <div class="grid2Cols">
       <img src="images/school.jpg" width="500px" height="400px" class="schl" />
       <div style="width: 620;"> <span id="photo">About Our School</span>
-        <h2 class="graph">20 Years Of Experience<br /><b style="color: #75389f ;font-family: 'Exo';">In Teaching
-            Sector</b></h2>
+        <h2 class="graph">A Legacy Of Excellence <br /><b style="color: #75389f ;font-family: 'Exo';">Education At Its Finest</b></h2>
         <p style="font-size: larger;font-family: 'Rubik';">D.A.V Police Public School, Madhuban is a glittering bead in
           the rosary of the DAV Institutions run by DAV College Managing Committee, New Delhi.</p>
         <p>The school is on the path of continuous development and progress. The school is affiliated to Central Board
